# RoboticsSimulation

./: .gitignore  BUILD.bazel  Dockerfile  Dockerfile copy  README.md  WORKSPACE  bazel-MujocoSimulation  bazel-bin  bazel-out  bazel-testlogs  glfw3.BUILD  mujoco.BUILD  opencv.BUILD  osqp.BUILD  qpoases.BUILD  repo.BUILD
include/: SimulationInterface.h
models/: manipulator.xml
models/UR5_with_gripper/: UR5gripper.xml  UR5gripper_3_finger.xml  UR5gripper_reacher.xml
src/: manipulation.cpp  pd.cpp  test_gl.cpp  ur5_manipulator.cpp
