load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_library(
        name = "robot_lib",
        srcs = glob(["src/*.cpp"]),
        hdrs = glob(["include/*.hpp"]),
        copts = [""],
        deps = ["@mujoco//:mujoco",
                "@osqp//:osqp",
                "@rbdl//:rbdl",
                "@qpoases//:qpoases"],
        visibility = ["//visibility:public"],
        linkstatic = 1,
)

# cc_binary(
# )