load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
        name = "pd_controller",
        srcs = ["src/pd.cpp"],
        deps = ["@mujoco//:mujoco",
                "@osqp//:osqp",
                "@rbdl//:rbdl",
                "@qpoases//:qpoases",
                "@glfw3//:glfw3"],
        visibility = ["//visibility:public"],
        linkstatic = 1,
)